[package]
name = "seed_rs_realworld"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
#seed = "^x.x.x"
seed = { git = "https://github.com/MartinKavik/seed", branch="feat/architecture-update" }
wasm-bindgen = "^0.2.45"
tool = "0.2.1"
indexmap = { version = "1.0.2", features = [ "serde-1" ] }
futures = "^0.1.27"
serde = "^1.0.92"
serde_json = "1.0.39"
unicode-segmentation = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
chrono = "0.4"
num-integer = "0.1.41"
lazy_static = "1.3.0"
web-sys = { version = "0.3.25", features = [ "ScrollBehavior", "ScrollToOptions" ] }
