[package]
name = "seed_rs_realworld"
version = "0.1.0"
repository = "https://github.com/seed-rs/seed-rs-realworld"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Exemplary real world application built with Seed"
categories = ["wasm", "rust", "seed", "realworld", "example"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.2.45" # NOTE: keep in sync with wasm-bindgen version

[dependencies]
seed = "0.4.2"
wasm-bindgen = "0.2.45"
tool = "0.2.1"
indexmap = { version = "1.0.2", features = [ "serde-1" ] }
futures = "0.1.27"
serde = "1.0.92"
serde_json = "1.0.39"
unicode-segmentation = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
chrono = "0.4"
num-integer = "0.1.41"
lazy_static = "1.3.0"
shrinkwraprs = "0.2.1"
newtype = "0.2.1"
web-sys = { version = "0.3.25", features = [ "ScrollBehavior", "ScrollToOptions" ] }
gloo-timers = {version = "^0.1.0", features = ["futures"]}

[profile.release]
lto = true
opt-level = 's'
